--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["16", "14", "12"]
+        node: ["16", "14"]
     name: Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@master
